# Rubix-cube-solver-

./: .gitignore  CMakeLists.txt  RubixCube.pptx  input.cpp  input.h  structures.cpp  structures.h
RubixCube/: CMakeCache.txt  CmakeLists.txt  Input.cpp  Input.hpp  Makefile  Output.cpp  Output.hpp  RCube.cpp  RCube.hpp  RCubeSolver.cpp  RCubeSolver.hpp  Rubix  ShiftArray.cpp  rubix.cpp
RubixCube6/: CMakeCache.txt  CmakeLists.txt  INode.hpp  Input.cpp  Makefile  RCube.cpp  RCube.hpp  RCubeSolver.cpp  RCubeSolver.hpp  ReadMe.md  Rubix  ShiftArray.cpp  ShiftArray.hpp  cmake_install.cmake  input.txt  rubix.cpp
